button align issue fixed

--- a/css/customer.css
+++ b/css/customer.css
@@ -8,10 +8,6 @@ h3 {
   font-size: 1.5rem;
 }
 
-form {
-  padding: 2rem;
-}
-
 form input {
   outline: none;
   border: 2px solid #5c258d;
@@ -38,6 +34,10 @@ a,
   font-size: 1.2rem;
   padding-left: 1rem;
   display: inline-block;
+}
+
+.search-form {
+  padding: 2rem;
 }
 
 .search-form button {
